--- a/src/AppBundle/Resources/views/part/menu.html.twig
+++ b/src/AppBundle/Resources/views/part/menu.html.twig
@@ -77,32 +77,22 @@
         <ul class="navbar-nav">
           <li class="nav-item">
             <a class="nav-link" href="{{ path("homepage") }}">
-              <i class="ni ni-tv-2 text-primary"></i> Vue d'ensemble
+              <i class="ni ni-tv-2 text-primary"></i> Overview
             </a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">
-              <i class="ni ni-planet text-blue"></i> Comissionnements
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">
-              <i class="ni ni-planet text-orange"></i> Souscriptions
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">
-              <i class="ni ni-planet text-orange"></i>Performances
+              <i class="ni ni-chart-bar-32 text-info"></i>Performances
             </a>
           </li>             
           <li class="nav-item">
             <a class="nav-link" href="#">
-              <i class="ni ni-planet text-orange"></i> Rapports
+              <i class="ni ni-single-copy-04 text-success"></i> Rapports
             </a>
           </li>   
           <li class="nav-item">
             <a class="nav-link" href="#">
-              <i class="ni ni-planet text-orange"></i> Feedbacks
+              <i class="ni ni-image text-orange"></i> Galerie
             </a>
           </li>                           
         </ul>
