--- a/src/AppBundle/Resources/views/charts.js.twig
+++ b/src/AppBundle/Resources/views/charts.js.twig
@@ -428,43 +428,14 @@ var OrdersChart = (function() {
 
 		// Create chart
 		var ordersChart = new Chart($chart, {
-			type: 'bar',
-			options: {
-				scales: {
-					yAxes: [{
-						ticks: {
-							callback: function(value) {
-								if (!(value % 10)) {
-									//return '$' + value + 'k'
-									return value
-								}
-							}
-						}
-					}]
-				},
-				tooltips: {
-					callbacks: {
-						label: function(item, data) {
-							var label = data.datasets[item.datasetIndex].label || '';
-							var yLabel = item.yLabel;
-							var content = '';
-
-							if (data.datasets.length > 1) {
-								content += '<span class="popover-body-label mr-auto">' + label + '</span>';
-							}
-
-							content += '<span class="popover-body-value">' + yLabel + '</span>';
-							
-							return content;
-						}
-					}
-				}
-			},
+			type: 'pie',
 			data: {
-				labels: ['Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec'],
-				datasets: [{
-					label: 'Sales',
-					data: [25, 20, 30, 22, 17, 29]
+			labels: [{% for item in produits %} "{{item.nom}}" {% if not loop.last %},{% endif %}{% endfor %}],
+			datasets: [{
+					label: 'Type de contrat',
+					data: [{% for item in produits %} {{item.nombre}}{% if not loop.last %},{% endif %} {% endfor %}],
+               backgroundColor: [{% for color in colors  %}"{{ color}}",{%endfor%}],
+               hoverBackgroundColor: [{% for color in colors  %}"{{ color}}",{%endfor%}]
 				}]
 			}
 		});
@@ -481,8 +452,6 @@ var OrdersChart = (function() {
 
 })();
 
-//
-// Charts
 //
 
 'use strict';
@@ -515,7 +484,7 @@ var SalesChart = (function() {
 							callback: function(value) {
 								if (!(value % 10)) {
 									//return '$' + value + 'k';
-									return  value*7;
+									return  value;
 								}
 							}
 						}
@@ -539,10 +508,10 @@ var SalesChart = (function() {
 				}
 			},
 			data: {
-				labels: ['Jan', 'Fév', 'Mars', 'Avril', 'Mai', 'Juin', 'Août', 'Sept.'],
+				labels: [{% for item in countAndCashByMonth %} "{{item.month}}" {% if not loop.last %},{% endif %}{% endfor %}],
 				datasets: [{
 					label: 'Performance',
-					data: [0, 20, 10, 30, 15, 40, 20, 60, 60]
+					data: [{% for item in countAndCashByMonth %} {{item.nombre}}{% if not loop.last %},{% endif %} {% endfor %}]
 				}]
 			}
 		});
