--- a/app/Resources/views/pointvente/index.html.twig
+++ b/app/Resources/views/pointvente/index.html.twig
@@ -1,7 +1,8 @@
-{% extends 'base.html.twig' %}
+  {% extends "AppBundle::layout.html.twig" %}
 
-{% block body %}
-    <h1>Pointventes list</h1>
+{% block main_content %}
+    <div class="main-content">
+    <h1>Field soldiers list</h1>
 
     <table>
         <thead>
@@ -35,7 +36,8 @@
 
     <ul>
         <li>
-            <a href="{{ path('pointvente_new') }}">Create a new pointVente</a>
+            <a href="{{ path('pointvente_new') }}">Create a new Field soldier</a>
         </li>
     </ul>
+  </div>  
 {% endblock %}
