--- a/app/Resources/views/pointvente/new.html.twig
+++ b/app/Resources/views/pointvente/new.html.twig
@@ -1,7 +1,8 @@
-{% extends 'base.html.twig' %}
+  {% extends "AppBundle::layout.html.twig" %}
 
-{% block body %}
-    <h1>Pointvente creation</h1>
+{% block main_content %}
+    <div class="main-content">
+    <h1>Field soldiers creation</h1>
 
     {{ form_start(form) }}
         {{ form_widget(form) }}
@@ -13,4 +14,5 @@
             <a href="{{ path('pointvente_index') }}">Back to the list</a>
         </li>
     </ul>
+    </div>
 {% endblock %}
