--- a/src/AppBundle/Resources/views/part/menu.html.twig
+++ b/src/AppBundle/Resources/views/part/menu.html.twig
@@ -86,10 +86,15 @@
             </a>
           </li>             
           <li class="nav-item">
-            <a class="nav-link" href="#">
+            <a class="nav-link" href="{{ path("commende_index") }}">
               <i class="ni ni-single-copy-04 text-success"></i> Rapports
             </a>
-          </li>   
+          </li>  
+          <li class="nav-item">
+            <a class="nav-link" href="#">
+              <i class="ni ni-single-copy-04 text-success"></i> Documents
+            </a>
+          </li>           
           <li class="nav-item">
             <a class="nav-link" href="#">
               <i class="ni ni-image text-orange"></i> Galerie
