liste des ressources

--- a/src/AppBundle/Resources/views/index.html.twig
+++ b/src/AppBundle/Resources/views/index.html.twig
@@ -18,7 +18,7 @@
                 <div class="card-body">
                   <div class="row">
                     <div class="col">
-                      <h5 class="card-title text-uppercase text-muted mb-0">Nombre total des souscriptrions</h5>
+                      <h5 class="card-title text-uppercase text-muted mb-0">Nombre total de souscriptrions</h5>
                       <span class="h2 font-weight-bold mb-0">{{countAndCash.nombre|number_format(0, ',', '.')}}</span>
                     </div>
                     <div class="col-auto">
@@ -81,7 +81,7 @@
                 <div class="card-body">
                   <div class="row">
                     <div class="col">
-                      <h5 class="card-title text-uppercase text-muted mb-0">Nombre de jour effectués</h5>
+                      <h5 class="card-title text-uppercase text-muted mb-0">Nombre de jours effectués</h5>
                       <span class="h2 font-weight-bold mb-0">{{totalWorkedDays}} jours</span>
                     </div>
                     <div class="col-auto">
