--- a/src/AppBundle/Resources/views/charts.js.twig
+++ b/src/AppBundle/Resources/views/charts.js.twig
@@ -501,7 +501,7 @@ var SalesChart = (function() {
 								content += '<span class="popover-body-label mr-auto">' + label + '</span>';
 							}
 
-							content += '<span class="popover-body-value">' + yLabel*7 + '</span>';
+							content += '<span class="popover-body-value">' + yLabel + '</span>';
 							return content;
 						}
 					}
