--- a/src/AppBundle/Resources/views/index.html.twig
+++ b/src/AppBundle/Resources/views/index.html.twig
@@ -160,7 +160,7 @@
             </div>
           </div>
         </div>
-        
+
 
         <div class="col-xl-4">
           <div class="card shadow">
@@ -198,6 +198,43 @@
               </table>
             </div>            
           </div>
+
+          <div class="card shadow">
+            <div class="card-header border-0">
+              <div class="row align-items-center">
+                <div class="col">
+                  <h3 class="mb-0">Par Offre</h3>
+                </div>
+                  <div class="col text-right">
+
+                </div>
+              </div>
+            </div>
+            <div class="table-responsive">
+              <!-- Projects table -->
+              <table class="table align-items-center table-flush">
+                <thead class="thead-light">
+                  <tr>
+                    <th scope="col">Ofrre</th>
+                    <th scope="col">Nombre</th>
+                  </tr>
+                </thead>
+                <tbody>
+                   {% for item in produit %}
+                  <tr>
+                    <th scope="row">
+                   <a href="#"> {{ item.nom|e }}</a>
+                    </th>
+                    <td>
+                      {{ item.nombre }}
+                    </td>                    
+                  </tr>
+                {% endfor %}
+                </tbody>
+              </table>
+            </div>            
+          </div>
+
         </div>
       </div>
     {% endblock %}
