--- a/src/AppBundle/Resources/views/index.html.twig
+++ b/src/AppBundle/Resources/views/index.html.twig
@@ -220,7 +220,7 @@
                   </tr>
                 </thead>
                 <tbody>
-                   {% for item in produit %}
+                   {% for item in produits %}
                   <tr>
                     <th scope="row">
                    <a href="#"> {{ item.nom|e }}</a>
