--- a/src/AppBundle/Resources/views/index.html.twig
+++ b/src/AppBundle/Resources/views/index.html.twig
@@ -28,7 +28,7 @@
                   <h3 class="mb-0">Aperçu des performances des field soldiers</h3>
                 </div>
                 <div class="col text-right">
-                  <a href="{{ path("commende_performances") }}" class="btn btn-sm btn-primary">Afficher tout</a>
+                  <a href="{{ path("export_excel") }}" class="btn btn-sm btn-primary">Exporter vers excel</a>
                 </div>
               </div>
             </div>
