--- a/src/AppBundle/Resources/views/index.html.twig
+++ b/src/AppBundle/Resources/views/index.html.twig
@@ -37,6 +37,7 @@
               <table class="table align-items-center table-flush">
                 <thead class="thead-light">
                   <tr>
+                    <th scope="col">Superviseur</th>
                     <th scope="col">Field Soldiers</th>
                     <th scope="col">Nombre de jour</th>
                     <th scope="col">Souscriptions</th>
@@ -49,7 +50,14 @@
                   {% for user in workedDays %}
                   <tr>
                     <th scope="row">
+                      <a href="{{ path('commendes_list',{'user':user.idsup}) }}">
+                     {{ user.superviseur|e }}
+                   </a>
+                    </th>
+                    <th scope="row">
+                      <a href="{{ path('commendes_list',{'pointVente':user.id}) }}">
                      {{ user.nom|e }}
+                     </a>
                     </th>
                     <td>
                       {{ user.nombrejours }}
@@ -108,7 +116,8 @@
                    {% for item in workedSuperviseur %}
                   <tr>
                     <th scope="row">
-                       {{ item.nom|e }}
+                      <a href="{{ path('commendes_list',{'user':item.id}) }}">
+                       {{ item.nom|e }}</a>
                     </th>
                     <td>
                       {{ item.nombrefs }}
