--- a/src/AppBundle/Resources/views/index.html.twig
+++ b/src/AppBundle/Resources/views/index.html.twig
@@ -179,7 +179,7 @@
                   <h3 class="mb-0">Déroulement</h3>
                 </div>
                   <div class="col text-right">
-                  <a href="{{ path("commende_index") }}" class="btn btn-sm btn-primary">Rapports</a>
+                  <a href="{{ path("commende_list") }}" class="btn btn-sm btn-primary">Rapports</a>
                 </div>
               </div>
             </div>
