--- a/src/AppBundle/Resources/views/index.html.twig
+++ b/src/AppBundle/Resources/views/index.html.twig
@@ -93,7 +93,7 @@
             <div class="card-header bg-transparent">
               <div class="row align-items-center">
                 <div class="col">
-                  <h2 class="mb-0">Performances des superviseurs</h2>
+                  <h2 class="mb-0">Superviseurs</h2>
                 </div>
               </div>
             </div>
@@ -103,8 +103,8 @@
                 <thead class="thead-light">
                   <tr>
                     <th scope="col">Nom</th>
-                    <th scope="col">Field Soldiers</th>
-                    <th scope="col">Souscriptions</th>
+                    <th scope="col">FS</th>
+                    <th scope="col">Total</th>
 
                   </tr>
                 </thead>
