--- a/src/AppBundle/Resources/views/index.html.twig
+++ b/src/AppBundle/Resources/views/index.html.twig
@@ -38,10 +38,10 @@
                 <thead class="thead-light">
                   <tr>
                     <th scope="col">Superviseur</th>
-                    <th scope="col">Field Soldiers</th>
-                    <th scope="col">Nombre de jour</th>
-                    <th scope="col">Souscriptions</th>
-                    <th scope="col">Progression</th>
+                    <th scope="col">FS</th>
+                    <th scope="col">Jours</th>
+                    <th scope="col">Total</th>
+                    <th scope="col">P</th>
                     <th scope="col">GAP</th>
                   </tr>
                 </thead>
