--- a/src/AppBundle/Resources/views/part/kpi.html.twig
+++ b/src/AppBundle/Resources/views/part/kpi.html.twig
@@ -47,7 +47,13 @@
                   <div class="row">
                     <div class="col">
                       <h5 class="card-title text-uppercase text-muted mb-0">Nombre total de Fiel soldiers</h5>
-                      <span class="h2 font-weight-bold mb-0">{{fiedSoldiersCount}}</span>
+                      <span class="h2 font-weight-bold mb-0">
+                      {% if is_granted('ROLE_SUPERVISEUR') %}
+                        {{fiedSoldiersCount}}
+                      {% else %}
+                        info restreinte
+                      {% endif %}
+                      </span>
                     </div>
                     <div class="col-auto">
                       <div class="icon icon-shape bg-yellow text-white rounded-circle shadow">
