--- a/src/AppBundle/Resources/views/index.html.twig
+++ b/src/AppBundle/Resources/views/index.html.twig
@@ -28,7 +28,7 @@
                   <h3 class="mb-0">Aperçu des performances des field soldiers</h3>
                 </div>
                 <div class="col text-right">
-                  <a href="{{ path("export_excel") }}" class="btn btn-sm btn-primary">Exporter vers excel</a>
+                  <a href="{{ path("export_excel") }}" class="btn btn-sm btn-primary">Exporter les performances</a>
                 </div>
               </div>
             </div>
@@ -99,6 +99,9 @@
                 <div class="col">
                   <h2 class="mb-0">Superviseurs</h2>
                 </div>
+                <div class="col text-right">
+                  <a href="{{ path("export_excel_pointages") }}" class="btn btn-sm btn-primary">Pointages</a>
+                </div>                
               </div>
             </div>
             <div class="table-responsive">
